<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.CreateContactsActivity">

    <EditText
        android:id="@+id/name"
        android:layout_width="370dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="101dp"
        android:ems="10"
        android:hint="@string/name_field_hint"
        android:inputType="text"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/create_contacts_toolbar" />

    <EditText
        android:id="@+id/emailAddress"
        android:layout_width="380dp"
        android:layout_height="41dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="15dp"
        android:ems="10"
        android:hint="@string/email_field_hint"
        android:inputType="textEmailAddress"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/numberId" />

    <EditText
        android:id="@+id/phoneNumber"
        android:layout_width="172dp"
        android:layout_height="49dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="21dp"
        android:ems="10"
        android:hint="@string/phone_field_hint"
        android:inputType="phone"
        android:textColorHint="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailAddress" />

    <EditText
        android:id="@+id/professionalProfile"
        android:layout_width="379dp"
        android:layout_height="39dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/professional_profile_field_hint"
        android:inputType="textMultiLine"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phoneNumber" />

    <EditText
        android:id="@+id/technicalKnowledge"
        android:layout_width="379dp"
        android:layout_height="44dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/technical_knowledge_field_hint"
        android:inputType="textMultiLine"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/professionalProfile" />

    <Button
        android:id="@+id/createContactButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="160dp"
        android:layout_marginTop="29dp"
        android:layout_marginEnd="160dp"
        android:layout_marginBottom="56dp"
        android:onClick="createContact"
        android:text="@string/save_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/academicBackground"
        app:layout_constraintVertical_bias="0.416" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/create_contacts_toolbar"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="1dp"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/toolbar_title_create"
        app:titleTextAppearance="@style/TextAppearance.AppCompat.Medium"
        app:titleTextColor="@color/white" />

    <EditText
        android:id="@+id/numberId"
        android:layout_width="223dp"
        android:layout_height="43dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="@string/number_id_field_hint"
        android:inputType="number"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name" />

    <EditText
        android:id="@+id/experience"
        android:layout_width="375dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="17dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/experience_field_hint"
        android:inputType="textMultiLine"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/technicalKnowledge" />

    <EditText
        android:id="@+id/academicBackground"
        android:layout_width="377dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/academic_background_field_hint"
        android:inputType="textMultiLine"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/experience" />

    <Spinner
        android:id="@+id/typeIdSelector"
        android:layout_width="142dp"
        android:layout_height="42dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintEnd_toStartOf="@+id/numberId"
        app:layout_constraintHorizontal_bias="0.083"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name" />

    <EditText
        android:id="@+id/birthDate"
        android:layout_width="188dp"
        android:layout_height="43dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:focusedByDefault="false"
        android:hint="@string/birth_date_field_hint"
        android:inputType="date"
        android:keyboardNavigationCluster="false"
        android:onClick="showCalendar"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/phoneNumber"
        app:layout_constraintTop_toBottomOf="@+id/emailAddress" />

</androidx.constraintlayout.widget.ConstraintLayout>